--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.1.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-simple-image-viewer": "^1.2.2",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
@@ -28,6 +32,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:4000",
   "eslintConfig": {
     "extends": [
       "react-app",
